@@ -2,13 +2,19 @@
   :description "FIXME: write description"
   :url "http://example.com/FIXME"
   :min-lein-version "2.0.0"
-  :dependencies [[org.clojure/clojure "1.9.0"]
+  :dependencies [[com.stuartsierra/dependency "0.2.0"]
                  [duct/core "0.6.2"]
+                 [duct/database.sql.hikaricp "0.3.3"]
+                 ;; [duct/module.cljs "0.3.2"]
                  [duct/module.logging "0.3.1"]
-                 [duct/module.web "0.6.4"]
-                 [duct/module.cljs "0.3.2"]
                  [duct/module.sql "0.4.2"]
-                 [org.postgresql/postgresql "42.1.4"]]
+                 [duct/module.web "0.6.4"]
+                 [integrant "0.7.0-alpha2"]
+                 [mysql/mysql-connector-java "8.0.11"]
+                 [org.clojure/clojure "1.9.0"]
+                 ;; [org.clojure/clojurescript "1.10.339"]
+                 ]
+  :jvm-opts ["--add-modules" "java.xml.bind"]
   :plugins [[duct/lein-duct "0.10.6"]]
   :main ^:skip-aot chat-server.main
   :resource-paths ["resources" "target/resources"]
@@ -17,11 +23,12 @@
   {:dev  [:project/dev :profiles/dev]
    :repl {:prep-tasks   ^:replace ["javac" "compile"]
           :repl-options {:init-ns user
-                         :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}}
+                         ;; :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]
+                         }}
    :uberjar {:aot :all}
    :profiles/dev {}
    :project/dev  {:source-paths   ["dev/src"]
                   :resource-paths ["dev/resources"]
-                  :dependencies   [[integrant/repl "0.2.0"]
-                                   [eftest "0.4.1"]
+                  :dependencies   [[eftest "0.5.2"]
+                                   [integrant/repl "0.3.1"]
                                    [kerodon "0.9.0"]]}})
